@@ -291,6 +291,10 @@ function _adRenderFlash($aBanner, $zoneId=0, $source='', $ct0='', $withText=fals
     $fileUrl = _adRenderBuildFileUrl($aBanner, false, $swfParams);
     $protocol = ($_SERVER['SERVER_PORT'] == $conf['max']['sslPort']) ? "https" : "http";
     $rnd = md5(microtime());
+    // Always get the image beacon, needed for capping/blocking...
+    $beaconTag = _adRenderImageBeacon($aBanner, $zoneId, $source, $loc, $referer);
+    // Strip beacon from alternate image
+    $altImageAdCode = str_replace($beaconTag, '', $altImageAdCode);
     $code = "
 <div id='m3_$rnd' style='display: inline;'>$altImageAdCode</div>
 <script type='text/javascript'>
@@ -299,8 +303,6 @@ function _adRenderFlash($aBanner, $zoneId=0, $source='', $ct0='', $withText=fals
    fo.write('m3_$rnd');
 </script>";
     $bannerText = $withText && !empty($aBanner['bannertext']) ? "<br />{$clickTag}{$aBanner['bannertext']}{$clickTagEnd}" : '';
-    // Always get the image beacon, needed for capping/blocking...
-    $beaconTag = _adRenderImageBeacon($aBanner, $zoneId, $source, $loc, $referer);
     return "{$prepend}{$code}{$bannerText}{$beaconTag}{$append}";
 }
 
@@ -346,6 +348,10 @@ function _adRenderQuicktime($aBanner, $zoneId=0, $source='', $ct0='', $withText=
     }
     $clickTag = _adRenderBuildFileUrl($aBanner, $source, $ct0, $logClick);
     $fileUrl = _adRenderBuildFileUrl($aBanner, false, $swfParams);
+    // Always get the image beacon, needed for capping/blocking...
+    $beaconTag = _adRenderImageBeacon($aBanner, $zoneId, $source, $loc, $referer);
+    // Strip beacon from alternate image
+    $altImageBannercode = str_replace($beaconTag, '', $altImageBannercode);
     $code = "
 <object classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.com/qtactivex/qtplugin.cab' width='$width' height='$height'>
 <param name='src' value='$fileUrl'>
@@ -355,8 +361,6 @@ function _adRenderQuicktime($aBanner, $zoneId=0, $source='', $ct0='', $withText=
 <noembed>$altImageBannercode</noembed>
 </object>";
     $bannerText = $withText && !empty($aBanner['bannertext']) ? "<br />{$anchor}{$aBanner['bannertext']}{$anchorEnd}" : '';
-    // Always get the image beacon, needed for capping/blocking...
-    $beaconTag = _adRenderImageBeacon($aBanner, $zoneId, $source, $loc, $referer);
     return $prepend . $code . $bannerText . $beaconTag . $append;
 }
 
