@@ -137,15 +137,17 @@ class test_DeliveryAdRender extends UnitTestCase
 		$loc		=	0;
 		$referer	= 	'http://some.referrer.com/';
 
-		$ret 	= _adRenderQuicktime($aBanner, $zoneId, $source, $ct0, $withText, $logClick, $logView, $useAlt, $loc, $referer);
-        $this->assertEqual($ret, "$prepend
+		$expect = "$prepend
 <object classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.com/qtactivex/qtplugin.cab' width='104' height='104'>
 <param name='src' value=''>
 <param name='controller' value='false'>
 <param name='autoplay' value='true'>
 <embed src='' controller='false' autoplay='true' width='104' height='104' pluginspace='http://www.apple.com/quicktime/download/'></embed>
 <noembed><p>before</p><p>after</p></noembed>
-</object><div id='beacon_' style='position: absolute; left: 0px; top: 0px; visibility: hidden;'><img src='http://".$GLOBALS['_MAX']['CONF']['webpath']['delivery']."/".$GLOBALS['_MAX']['CONF']['file']['log']."?bannerid=&amp;campaignid=&amp;zoneid=0&amp;channel_ids=&amp;cb={random}' width='0' height='0' alt='' style='width: 0px; height: 0px;'></div>$append");
+</object><div id='beacon_' style='position: absolute; left: 0px; top: 0px; visibility: hidden;'><img src='http://".$GLOBALS['_MAX']['CONF']['webpath']['delivery']."/".$GLOBALS['_MAX']['CONF']['file']['log']."?bannerid=&amp;campaignid=&amp;zoneid=0&amp;channel_ids=&amp;cb={random}' width='0' height='0' alt='' style='width: 0px; height: 0px;'></div>$append";
+
+		$ret 	= _adRenderQuicktime($aBanner, $zoneId, $source, $ct0, $withText, $logClick, $logView, $useAlt, $loc, $referer);
+        $this->assertEqual($ret, $expect);
 	}
 
 	/**
